# antares_craft

./: .coveragerc  .gitignore  AUTHORS.txt  CONCATENATED_README.md  README.md  mkdocs.yml  mypy.ini  noComit_TEST.py  noCommitForTest.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-doc.txt  requirements.txt  ruff.toml  sonar-project.properties  tox.ini
.github/workflows/: ci.yml  coverage.yml  daily_non_regression_web_tests.yml  docs_build.yml  integration_tests.yml  license_header.yml  publish.yml
docs/: CHANGELOG.md  antares-craft-examples.md  api-reference.md  developer.md  getting-started.md  index.md  quickstart.md  usage.md  user-guide.md
docs/api-reference/: api_conf.md
docs/api-reference/config/: local_config.md
docs/api-reference/model/: area.md  binding_constraint.md  cluster.md  commons.md  hydro.md  link.md  output.md  renewable.md  scenario_builder.md  simulation.md  st_storage.md  study.md  thermal.md
docs/api-reference/model/settings/: adequacy_patch.md  advanced_parameters.md  general.md  optimization.md  playlist_parameters.md  study_settings.md  thematic_trimming.md
docs/api-reference/model/xpansion/: candidate.md  constraint.md  sensitivity.md  settings.md  xpansion_configuration.md
docs/assets/: architecture-all.drawio  architecture-area.drawio  architecture-binding-constraints.drawio  architecture-legend.drawio  architecture-link.drawio  architecture-outputs.drawio  architecture-settings.drawio  architecture-simulation-settings.drawio  architecture-start.drawio  architecture-xpansion.drawio
docs/contributing/: developer.md  doc.md
docs/getting-started/: architecture.md  first-steps.md  glossary.md
docs/javascripts/: drawio-reload.js  mathjax.js
scripts/: concat_readme.py  find_release.sh  license_checker_and_adder.py
src/antares/: __init__.py
src/antares/api_conf/: api_conf.py  request_wrapper.py
src/antares/config/: base_configuration.py  local_configuration.py
src/antares/craft/: __init__.py
src/antares/craft/api_conf/: api_conf.py  request_wrapper.py
src/antares/craft/config/: base_configuration.py  local_configuration.py
src/antares/craft/exceptions/: exceptions.py
src/antares/craft/model/: area.py  binding_constraint.py  cluster.py  commons.py  craft_base_model.py  hydro.py  link.py  output.py  renewable.py  scenario_builder.py  simulation.py  st_storage.py  study.py  thermal.py
src/antares/craft/service/: base_services.py  output_matrix_parsing.py  service_factory.py  utils.py  xpansion_output_parsing.py
src/antares/craft/tools/: alias_generators.py  all_optional_meta.py  contents_tool.py  custom_raw_config_parser.py  ini_tool.py  matrix_tool.py  model_tools.py  prepro_folder.py  time_series_tool.py  utils.py
src/antares/exceptions/: exceptions.py
src/antares/model/: area.py  binding_constraint.py  cluster.py  commons.py  hydro.py  job.py  link.py  load.py  misc_gen.py  output.py  renewable.py  reserves.py  simulation.py  solar.py  st_storage.py  study.py  thermal.py  wind.py
src/antares/model/settings/: __init__.py  adequacy_patch.py  advanced_parameters.py  antares_simulation_parameters.py  general.py  (+6 more)
src/antares/service/: base_services.py  service_factory.py
src/antares/tools/: all_optional_meta.py  contents_tool.py  custom_raw_config_parser.py  ini_tool.py  matrix_tool.py  model_tools.py  prepro_folder.py  time_series_tool.py
src/resources/: area_contents.json
tests/: conftest.py
tests/antares/assets/: xpansion_out.json  xpansion_sensitivity_out.json
tests/antares/delete/: test_delete_api.py
tests/antares/integration/: conftest.py  test_local_client.py
tests/antares/tools/: conftest.py  test_api_base_model.py  test_contents_tool.py  test_custom_raw_config_parser.py  test_ini_tool.py  test_local_base_model.py  test_time_series_tool.py
tests/integration/: antares_web_desktop.py  conftest.py  test_local_client.py  test_local_launcher.py  test_web_client.py
tests/integration/assets/: all_area.tsv  all_links.tsv  ind_area.tsv  ind_links.tsv
(+220 files in other folders)
