[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "antares_craft"
version = "0.5.0"
description = """Antares Craft python library under construction. It will allow to create, update and read antares studies."""
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Sylvain Leclerc" },
    { name = "Tatiana Vargas" },
    { name = "Martin Belthle" },
    { name = "Sigurd Borge" }
]
requires-python = ">=3.10"
dependencies = [
    "antares-timeseries-generation==0.1.8",
    "antares-study-version==1.0.20",
    "numpy>=1.0.0,<2.0.0",
    "pandas>=2.0.0,<3.0.0",
    "pyarrow>=20.0.0,<30.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "requests>=2.0.0,<3.0.0",
    "psutil>=7.0.0,<8.0.0"
]

classifiers = [
    #    Classifiers here: https://pypi.org/classifiers/
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Repository = "https://github.com/AntaresSimulatorTeam/antares_craft"
"Bug Tracker" = "https://github.com/AntaresSimulatorTeam/antares_craft/issues"

# Setuptools
[tool.setuptools.packages.find]
## All the following settings are optional:
where = ["src"]
